  Although technically possible to override any property in those files,
  the feature was added to tweak the *supportsMultipleStatements* property,
  and is probably the most common one to override.
  See the javadoc on com.tacitknowledge.util.migration.jdbc.DatabaseType
  for details on how to specify the override.
  Thanks to Alex Soto <Alex @ Tacit Knowledge || apsoto @ gmail>

Version 1.0.3
-------------
- Added "lockPollRetries" property, allows a configuration where AutoPatch
  will wait a maximum amount of time then override a lock. Also shored up
  testing / coverage in this area
  Thanks to Mike Hardy @ Tacit Knowledge

Version 1.0.2
-------------
- For standalone migration information and launcher added a possibility
  to supply a migration.settings system property (or command line argument)
  that will specify the name of the file to use for migration settings. If
  not supplied then the default 'migration.properties' will be used.  
  Thanks to Vladislav Gangan @ Tacit Knowledge

Version 1.0.1
-------------
- All development (bug tracking, feature requests, CVS, mailing lists)
  are hosted on sourceforge now, not just the releases. Check it out:
  http://autopatch.sourceforge.net
  
- Added support for Microsoft SQL Server dialect.
  Support for Microsoft SQL Server should be considered beta
  and some features may depend on specific JDBC drivers to
  work. The free MS-SQL JDBC driver may have issues.
  Basic DDL patches appear to work.
  https://sourceforge.net/support/tracker.php?aid=1658440
  Thank you Shirish Kulkarni
  
- Added support for Sybase dialect
  Support for Sybase should be considered beta at the moment.
  It has not received a great deal of testing yet.
  https://sourceforge.net/support/tracker.php?aid=1662010
  Thank you Alex Soto
  
- List of unapplied patches displayed prior to patching
  Mike Hardy
  https://sourceforge.net/support/tracker.php?aid=1658446
  
- Read-only mode implemented, now you can specify that the